logs/sigal.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/Markdown-2.6.11.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PIL'...
Listing './lib/python3.5/site-packages/PIL/.libs'...
Listing './lib/python3.5/site-packages/Pillow-5.0.0.dist-info'...
Listing './lib/python3.5/site-packages/blinker'...
Listing './lib/python3.5/site-packages/blinker-1.4.egg-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markdown'...
Listing './lib/python3.5/site-packages/markdown/extensions'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pilkit'...
Listing './lib/python3.5/site-packages/pilkit/processors'...
Listing './lib/python3.5/site-packages/pilkit-2.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sigal'...
Listing './lib/python3.5/site-packages/sigal/plugins'...
Listing './lib/python3.5/site-packages/sigal/templates'...
Listing './lib/python3.5/site-packages/sigal/themes'...
Listing './lib/python3.5/site-packages/sigal/themes/colorbox'...
Listing './lib/python3.5/site-packages/sigal/themes/colorbox/static'...
Listing './lib/python3.5/site-packages/sigal/themes/colorbox/static/css'...
Listing './lib/python3.5/site-packages/sigal/themes/colorbox/static/images'...
Listing './lib/python3.5/site-packages/sigal/themes/colorbox/static/js'...
Listing './lib/python3.5/site-packages/sigal/themes/colorbox/templates'...
Listing './lib/python3.5/site-packages/sigal/themes/default'...
Listing './lib/python3.5/site-packages/sigal/themes/default/templates'...
Listing './lib/python3.5/site-packages/sigal/themes/galleria'...
Listing './lib/python3.5/site-packages/sigal/themes/galleria/static'...
Listing './lib/python3.5/site-packages/sigal/themes/galleria/static/classic'...
Listing './lib/python3.5/site-packages/sigal/themes/galleria/static/css'...
Listing './lib/python3.5/site-packages/sigal/themes/galleria/static/img'...
Listing './lib/python3.5/site-packages/sigal/themes/galleria/static/js'...
Listing './lib/python3.5/site-packages/sigal/themes/galleria/static/leaflet'...
Listing './lib/python3.5/site-packages/sigal/themes/galleria/static/leaflet/images'...
Listing './lib/python3.5/site-packages/sigal/themes/galleria/templates'...
Listing './lib/python3.5/site-packages/sigal/themes/photoswipe'...
Listing './lib/python3.5/site-packages/sigal/themes/photoswipe/static'...
Listing './lib/python3.5/site-packages/sigal/themes/photoswipe/static/default-skin'...
Listing './lib/python3.5/site-packages/sigal/themes/photoswipe/static/echo'...
Listing './lib/python3.5/site-packages/sigal/themes/photoswipe/templates'...
Listing './lib/python3.5/site-packages/sigal-1.3.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
